# mind-changer

./: .gitignore  Cargo.toml  README.md  dataset-urls  devbox.json  justfile  rust-toolchain.toml
scripts/: download-dataset  import-dataset-sqlite
src/: dataset.rs  initial_guess.rs  main.rs  matrix_completion_als.rs  matrix_completion_gd.rs  matrix_completion_gd_burn.rs  matrix_completion_svd.rs  matrix_completion_svt.rs  matrix_factorization_als.rs  matrix_factorization_svd.rs  other.rs  print_array.rs  svt.rs
