[package]
name = "mind-changer"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.14.0", features = ["train", "ndarray"] }
csv = "1.3.0"
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
rustc-hash = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }

